--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "uvicorn (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "redis (>=6.2.0,<7.0.0)"
 ]
 
 
