--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
-    "redis (>=6.2.0,<7.0.0)"
+    "redis (>=6.2.0,<7.0.0)",
+    "aiohttp (>=3.12.13,<4.0.0)"
 ]
 
 
