--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   db:
     image: postgres:17-alpine
     container_name: db
+    hostname: ${POSTGRES_HOST}
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -14,6 +15,7 @@ services:
   redis:
     image: redis:latest
     container_name: redis
+    hostname: ${REDIS_HOST}
     volumes:
       - ./data/redis_data:/data
     ports:
