chore: update .env.example defaults and extend README with Docker commands

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 POSTGRES_HOST=db  # Dont change it
-POSTGRES_PORT=
+POSTGRES_PORT=5432  # Dont change it
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
 REDIS_HOST=redis  # Dont change it
-REDIS_PORT=
+REDIS_PORT=6379  # Dont change it
 REDIS_DB=
 
 TG_BOT_TOKEN=
